--- a/Dungeons&Databases/Shared/NavMenu.razor
+++ b/Dungeons&Databases/Shared/NavMenu.razor
@@ -26,8 +26,18 @@
                     </NavLink>
                 </div>
                 <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="quests">
+                        <span class="oi oi-script" aria-hidden="true"></span> Quests
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
                     <NavLink class="nav-link" href="shop">
-                        <span class="oi oi-list-rich" aria-hidden="true"></span> Shop
+                        <span class="oi oi-cart" aria-hidden="true"></span> Shop
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="trinkets">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Trinkets
                     </NavLink>
                 </div>
             }
