--- a/Dungeons&Databases/Pages/Index.razor
+++ b/Dungeons&Databases/Pages/Index.razor
@@ -5,3 +5,21 @@
 <h1>Hello and welcome to Dungeons and Databases!</h1>
 
 Complete quests and upgrade your adventurer on this amazing website based RPG!
+
+<h2>Main features</h2>
+
+<h3>Create your adventurer</h3>
+
+Create your adventurer thanks to a very useful form.
+
+<h3>Partake in epic quests</h3>
+Depending on your skills, you may be able to clear a few quests, to gain trinkets, gold and experience.
+
+<h3>Level up and become stronger</h3>
+After leveling up, you will be able to put more skill points in your character, to take down stronger quests and monsters!
+
+<h3>Craft items and equip your favourites</h3>
+The shop is filled with useful items, and as long as you have the resources, you're free to create as many as you like.
+Be careful though, you can only equip two items at once!
+
+<h1>Have fun!</h1>
