--- a/Dungeons&Databases/Shared/NavMenu.razor
+++ b/Dungeons&Databases/Shared/NavMenu.razor
@@ -36,6 +36,11 @@
                     </NavLink>
                 </div>
                 <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="inventory">
+                        <span class="oi oi-box" aria-hidden="true"></span> Inventory
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
                     <NavLink class="nav-link" href="trinkets">
                         <span class="oi oi-list-rich" aria-hidden="true"></span> Trinkets
                     </NavLink>
